force-app/main/default/objects/Customer_Machine__c/Customer_Machine__c.object-meta.xml
<CustomObject>
    <label>Customer Machine</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Customer Machine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Machines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>