force-app/main/default/objects/Customer_Machine__c/fields/Installation_Location__c.field-meta.xml
<CustomField>
    <fullName>Installation_Location__c</fullName>
    <label>Installation Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>