force-app/main/default/objects/Customer_Machine__c/fields/LastQualityCheck__c.field-meta.xml
<CustomField>
    <fullName>LastQualityCheck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Quality Check</label>
    <referenceTo>Quality_Check__c</referenceTo>
    <relationshipLabel>Customer Machines</relationshipLabel>
    <relationshipName>Customer_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>