force-app/main/default/objects/Customer_Machine__c/fields/LastQualityCheckMachine__c.field-meta.xml
<CustomField>
    <fullName>LastQualityCheckMachine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Quality Check Machine</label>
    <referenceTo>Quality_Check_Machine__c</referenceTo>
    <relationshipLabel>Customer Machines</relationshipLabel>
    <relationshipName>Customer_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>