force-app/main/default/objects/Customer_Machine__c/fields/Machine_Source__c.field-meta.xml
<CustomField>
    <fullName>Machine_Source__c</fullName>
    <label>Machine Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Darboven Contract</fullName>
            </value>
            <value>
                <fullName>Customer-Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>