force-app/main/default/objects/Customer_Machine__c/fields/MachineDisplayName__c.field-meta.xml
<CustomField>
    <fullName>MachineDisplayName__c</fullName>
    <formula>MachineNameModel__c &amp;
IF(
    NOT(ISBLANK(Installation_Location__c)),
    &quot; | &quot; &amp; Installation_Location__c,
    &quot;&quot;
) &amp;
IF(
    NOT(ISBLANK(SerialNumber__c)),
    &quot; | SN: &quot; &amp; SerialNumber__c,
    &quot;&quot;
)</formula>
    <label>Machine Display Name</label>
    <type>Text</type>
</CustomField>